# good-news-ai-website

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run_frontend.py
.streamlit/: config.toml
app/: __init__.py  news_pipeline.py  utils.py
app/fetchers/: __init__.py  newsapi_fetcher.py
app/filters/: __init__.py  llm_filter.py  sentiment.py
app/trace/: logger.py  logging.yml
app/ui/: sidebar.py  submission_form.py  tabs.py
storage/: articles.db  last_run.txt
