[project]
name = "good-news"
version = "0.1.0"
description = ""
authors = [
    {name = "None"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "tqdm>=4.66.4",
    "streamlit>=1.34.0",
    "groq>=0.9.0",
    "pydantic>=2.7.0",
    "transformers[sentencepiece]>=4.41.0",
    "torch>=2.0.0",
    "accelerate>=0.32.0",
    "instructor>=1.3.3",
    "streamlit-autorefresh (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

